<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">loot</string>
	<string name="search_text">Search...</string>
	<string name="new_trans">New Entry</string>
	<string name="settings">Settings</string>
	<string name="transfer">New Transfer</string>
	<string name="trans">Transfer</string>
	<string name="sort">Sort</string>
	<string name="search">Search</string>
	<string name="purge">Purge</string>
	<string name="new_account">New Account</string>
	<string name="acct_name">Account Name</string>
	<string name="acct_bal">Initial Balance</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="edit">Edit</string>
	<string name="del">Delete</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="account_del_box">Delete Account</string>
	<string name="copy">Copy</string>
	<string name="trans_posted">Posted</string>
	<string name="trans_budget">Budget</string>
	<string name="trans_balance">Balance</string>
	<string name="sort_column">Sort Column</string>
	<string name="unlock">Unlock</string>
	<string name="pin">Please enter the PIN to unlock the accounts.
	</string>
	<string name="invalid">Invalid PIN</string>
	<string name="post">Post</string>
	<string name="acct_priority">Display Priority</string>
	<string name="restore_account">Restore Account</string>
	<string name="clear_account">Clear Account</string>
	<string name="clear">Clear Deleted Account</string>
	<string name="restore">Restore Deleted Account</string>
	<string name="no_deleted_accounts">There are no deleted accounts in the database.
	</string>
	<string name="backup_path">/loot/LootDB.db</string>
	<string name="backup">Backup Database</string>
	<string name="restore_db">Restore Database</string>
	<string name="backup_successful">Database backed up to SD card.</string>
	<string name="backup_failed">Database could not be backed up to SD card.
	</string>
	<string name="restore_confirm">Are you sure you wish to restore the database?</string>
	<string name="confirm_string">Do not ask next time.</string>
	<string name="restore_successful">Database restored from SD card. Application will be
		stopped to reload the database.</string>
	<string name="restore_failed">Database could not be restored from the SD card.
	</string>
	<string name="backing_up">Backing up the database. This may take a while.
	</string>
	<string name="restoring">Restoring the database. This may take a while.
	</string>
	<string name="new_version">You have upgraded to a new version of loot. If you
		encounter any bugs, please email me at christopher.mccurdy@gmail.com
		with what you were doing at the time. Also, please feel free to donate
		to me through PayPal. Would you like to donate now?</string>
	<string name="donate_location">You can always donate at a later time by going to
		\&quot;Settings\&quot;, choosing \&quot;About\&quot;, and clicking on
		the donation button.</string>
	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=1368357
	</string>
	<string name="trans_amt">Amount</string>
	<string name="trans_party">Party</string>
	<string name="trans_date">Date</string>
	<string name="trans_account">Account</string>
	<string name="trans_check_num">Check #</string>
	<string name="trans_tags">Tags</string>
	<string name="trans_repeat">Repeat</string>
	<string name="no_locale">Loot requires that you have a valid locale set in
		order to work properly. Please set your locale in \&quot;Settings
		-&gt; Locale &amp; text -&gt; Set locale\&quot; and try again,
		otherwise you may not be able to enter transaction amounts properly.
		If you\'ve set the locale and it still doesn\'t work, use loot\'s
		settings to override the values it should detect.</string>
	<string name="bad_repeat">An error has occurred while repeating a
		transaction, and the transaction could not be found. The repeat
		schedule has been deleted.</string>
	<string name="repeat">Repeat Once</string>
	<string name="premium_enabled_title">Premium Enabled</string>
	<string name="premium_enabled_body">Thank you for purchasing the loot premium package!
		:-D</string>
	<string name="premium_disabled_title">Premium Disabled</string>
	<string name="premium_disabled_body">You must purchase the loot premium package in order
		to access these settings.</string>
	<string name="export">Export</string>
	<string name="import_">Import</string>
	<string name="chart">Chart</string>
	<string name="total_balance">Total Balance:</string>
	<string name="p_features">Features in Loot Premium include:</string>
	<string name="p_importing">&#8226; Importing and exporting CSV and Quicken
		(2006 and earlier QIF) files</string>
	<string name="p_colors">&#8226; Custom color schemes</string>
	<string name="p_charts">&#8226; Charting across all accounts</string>
	<string name="p_widget">&#8226; Widget for quick account access</string>
	<string name="p_receipt">&#8226; Ability to add receipts/images to transactions</string>
	<string name="p_more">&#8226; And more features planned for the future!</string>
	<string name="buy_now">Buy it now!</string>
	<string name="no_market">Market is not available</string>
	<string name="about">About Loot</string>
	<string name="created_by">Created by Christopher McCurdy</string>
	<string name="donate">Please feel free to donate to support the continued
		development of free software. I would like to thank everyone who has
		donated so far for your support.</string>
	<string name="comments">If you have any comments, questions, suggestions,
		or have discovered any bugs, please feel free to let me know at
		christopher.mccurdy@gmail.com.</string>
	<string name="javacsv">Portions of loot may be using JavaCSV. JavaCSV is
		provided for free under the LGPL license. The source code and
		licensing details are available at
		http://sourceforge.net/projects/javacsv</string>
	<string name="flot">Portions of loot may be using flot, which is
		provided for free under the MIT license. The source code and licensing
		details are available at http://code.google.com/p/flot/</string>
	<string name="paypal">Donate @ Paypal</string>
	<string name="checkout">Donate @ Google Checkout</string>
	<string name="no_external_storage">External storage is not available. This operation
		will not function properly.</string>
	<string name="low_external_memory">There is less than 1% total available memory on the
		external storage device. This operation may fail if it runs out of
		storage space.</string>
	<string name="changelog">Change Log</string>
	<string name="primary">Toggle Primary Account</string>
	<string name="primary_not_set">Please set an account to the primary by
		long-clicking and choosing \'Toggle Primary Account\' or editing the
		account and choosing that option. Otherwise, you may want to turn the
		option off.</string>
	<string name="primary_label">Primary Account</string>
	<string name="keyboard_style">On-Screen Keyboard Style</string>
	<string name="keyboard_style_message">Choose the style of the on-screen keyboard.</string>
	<string name="repeat_manager">Manage Repeats</string>
	<string name="posted">Posted</string>
	<string name="non_posted">Non-posted</string>
	<string name="date_format_message">
	   Enter date format as expected (ex. yyyy-MM-dd); empty for default values:\n
	   yyyy - 4 digit year\n
	   yy - 2 digit year\n
	   MM - 2 digit month\n
	   MMM - Text month\n
	   dd - 2 digit day\n
	</string>
	<string name="receipts">Receipts</string>
	<string name="attach_receipt">Attach Receipt</string>
	<string name="view_receipts">View Receipts</string>
    <string name="csv_order">Enter the order for CSV columns (default:
        %d,%c,%p,%a,%t)\n
        %d - date\n
        %c - check number\n
        %p - party\n
        %a - amount\n
        %b - absolute amount (used with %y)\n
        %y - transaction type (credit/debit)\n
        %t - tags\n
        %z - unused column\n
    </string>
    <string name="csv_debit_type">Enter comma-separated values for debit transactions
        (default: debit, withdraw):</string>
    <string name="csv_credit_type">Enter comma-separated values for credit
        transactions (default: credit, deposit):</string>
    <string name="tips">Show tips at startup</string>
    <string name="balance_display">Balance Display</string>
    <string name="credit_label">Credit Account</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="check">Check</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="sync">Sync</string>
    <string name="accounts">Accounts</string>
    <string name="formats">File Formats</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="export_done">The account has been exported to </string>
    <string name="export_failed">The account could not be exported to the SD card.
        It has been noted in the system log.</string>
    <string name="export_no_rows">There was no data to export within the given
        parameters.</string>
    <string name="no_accounts">No accounts were found.</string>
    <string name="chart_type">Chart Type</string>
    <string name="search_fields">Search Fields</string>
    <string name="x_axis">X-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="query_text">Comma-separated list of tags and/or parties. Leave
        blank to include all.</string>
    <string name="grouping">Grouping</string>
    <string name="chart_it">Chart It!</string>
    <string name="save_chart">Save Chart</string>
    <string name="load_chart">Load Chart</string>
    <string name="no_charts_to_load">No saved charts exist.</string>
    <string name="import_empty">Could not find any files to import.</string>
    <string name="import_warning">WARNING: This will import all data in the file and
        insert it into the selected account, regardless of whether or not it
        already exists.</string>
    <string name="generating_chart">Generating Chart</string>
    <string name="generating_chart_body">Gathering data for the chart. Please wait.</string>
    <string name="save_error">An error occurred while saving the chart. It has
        been logged.</string>
    <string name="load_error">An error occurred while loading the chart. It has
        been logged.</string>
    <string name="enter_filename">Enter Filename:</string>
    <string name="import_problem_title">Import Problems</string>
    <string name="import_problem_csv">There was a problem importing some rows. Please
        change the column order in the application settings, or make sure your
        CSV is formatted as follows:\n\n
        date, check_number,
        party, amount, tags</string>
    <string name="import_problem_qif">There was a problem importing some rows. Please
        make sure the data is valid.</string>
    <string name="import_successful"> transactions imported successfully.</string>
    <string name="select_item">Please select a file to import.</string>
    <string name="loot_not_installed">Please install the free version of Loot to use Loot
        Premium properly.</string>
    <string name="download_loot">Download Loot!</string>
    <string name="m_connection_code">My Connection Code</string>
    <string name="p_connection_code">Partner\'s Connection Code</string>
    <string name="sync_title">Loot Synchronization</string>
    <string name="sync_service_started">Synchronization service started.</string>
    <string name="sync_service_stopped">Synchronization service stopped.</string>
    <string name="sync_completed">Synchronization completed.</string>
    <string name="sync_failed">Synchronization failed.</string>
</resources>
