<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="vertical">
		<TextView android:layout_height="wrap_content"
			android:layout_marginTop="15dip" android:textStyle="bold" android:id="@+id/account_text"
			android:text="@string/accounts" android:layout_width="fill_parent"
			android:layout_marginLeft="8dip" />
		<Spinner android:layout_height="wrap_content" android:id="@+id/account_spinner"
			android:layout_width="fill_parent" />
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout04"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="vertical">
		<TextView android:layout_height="wrap_content"
			android:layout_marginTop="15dip" android:textStyle="bold"
			android:layout_width="fill_parent" android:layout_marginLeft="8dip"
			android:text="@string/begin_date" android:id="@+id/begin_date_text" />
		<LinearLayout android:id="@+id/LinearLayout05"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:gravity="right">
			<EditText android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/begin_date_edit"
				android:layout_gravity="right" android:inputType="none"
				android:minWidth="196dip" />
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:src="@drawable/ic_menu_today"
				android:layout_gravity="right" android:id="@+id/begin_date_button" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout03"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="vertical">
		<TextView android:layout_height="wrap_content"
			android:layout_marginTop="15dip" android:textStyle="bold"
			android:layout_width="fill_parent" android:layout_marginLeft="8dip"
			android:text="@string/end_date" android:id="@+id/end_date_text" />
		<LinearLayout android:id="@+id/LinearLayout06"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:gravity="right">
			<EditText android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="right"
				android:id="@+id/end_date_edit" android:inputType="none"
				android:minWidth="196dip" />
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/end_date_button"
				android:src="@drawable/ic_menu_today" android:layout_gravity="right" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:orientation="vertical">
		<TextView android:layout_height="wrap_content"
			android:textStyle="bold" android:layout_marginTop="15dip" android:id="@+id/format_text"
			android:layout_width="fill_parent" android:text="@string/formats"
			android:layout_marginLeft="8dip" />
		<Spinner android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/format_spinner"
			android:entries="@array/file_formats" />
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_weight="1" />
	<ImageButton android:layout_width="fill_parent" android:id="@+id/export_button"
		android:text="@string/export"
		android:layout_height="wrap_content" android:background="@drawable/gradient_button" android:src="@drawable/action_export"/>
</LinearLayout>
